fixed sticky bar overlaps content issue

--- a/mystatic/__base/__base.css
+++ b/mystatic/__base/__base.css
@@ -3,3 +3,7 @@
   width: 100%;
   top: 0;
 }
+
+.content{
+  margin-top: 3em;
+}
